[package]
name = "leetcode"
description = "nekomaru's leetcode solutions"
version = "0.1.0"
edition = "2021"

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# lint group `pedantic`
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
flat_map_option = "allow"
float_cmp = "allow"
if_not_else = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
match_on_vec_items = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
wildcard_imports = "allow"

# lint group `restriction`
absolute_paths = "allow"
arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
expect_used = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
let_underscore_untyped = "allow"
min_ident_chars = "allow"
missing_assert_message = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
modulo_arithmetic = "allow"
print_stdout = "allow"
pub_use = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
shadow_same = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
string_add = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
unwrap_used = "allow"

allow_attributes_without_reason = "allow"
as_conversions = "allow"
as_underscore = "allow"
dbg_macro = "allow"
exhaustive_structs = "allow"
impl_trait_in_params = "allow"
iter_over_hash_type = "allow"
missing_asserts_for_indexing = "allow"
missing_inline_in_public_items = "allow"
needless_borrowed_reference = "allow"
shadow_reuse = "allow"
shadow_unrelated = "allow"
use_debug = "allow"
