[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# lint group `cargo`, intentionally allowed
cargo_common_metadata = "allow"

# lint group `pedantic`, intentionally allowed
flat_map_option = "allow"
if_not_else = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow" #=> `winit::window::WindowBuilder`
must_use_candidate = "allow"
similar_names = "allow" #=> `min` and `mid`

# lint group `pedantic`, intentionally allowed, cast-related
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# lint group `pedantic`, intentionally allowed for nekomaru-leetcode only
needless_pass_by_value = "allow" #=> fn solution(_: Vec<_>) -> _

# lint group `restriction`, always allowed for any project
blanket_clippy_restriction_lints = "allow"
exhaustive_structs = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
modulo_arithmetic = "allow"
panic = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

# lint group `restriction`, intentionally allowed
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_underscore = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow" # or: `clippy::needless_else`
expect_used = "allow"
indexing_slicing = "allow"
let_underscore_untyped = "allow"
needless_borrowed_reference = "allow" # or: `clippy::pattern_type_mismatch`
print_stdout = "allow"
pub_use = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
unseparated_literal_suffix = "allow"  # xor: `clippy::separated_literal_suffix`
unwrap_used = "allow"
use_debug = "allow"

# lint group `restriction`, intentionally allowed for nekomaru-leetcode only
allow_attributes_without_reason = "allow"
missing_assert_message = "allow"
